--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ body {
 
 	/* spatial stuff */
 	width: 0;
+	height: 0;
 	/* height: 25ex; */
 
 	/* text stuff */
@@ -30,7 +31,7 @@ body {
 	word-break: break-all;
 
 	/* transition stuff */
-	transition: width 1s;
+	transition: width 0.25s, height 1s;
 }
 
 
