--- a/main.css
+++ b/main.css
@@ -26,7 +26,6 @@ body {
 
 	/* text stuff */
 	color: white;
-	font-size: 30px;
 	line-height: 1;
 	word-break: break-all;
 
@@ -34,17 +33,17 @@ body {
 	transition: width 0.25s, height 1s;
 }
 
+@media (orientation: landscape) {
+	body {background: #002200}
+	#container {font-size: calc(100vw / 30);}
+}
 
-/* @media (orientation: landscape) {
-	#container {
-		width: 133vh;
-		height: 100vh;
-	}
+@media (orientation: landscape) and (min-aspect-ratio: 4/3) {
+	body {background: #220000}
+	#container {font-size: calc(100vh / 20);}
 }
 
 @media (orientation: portrait) {
-	#container {
-		width: 100vw;
-		height: 75vw;
-	}
-} */
+	body {background: #000022}
+	#container {font-size: calc(100vw / 30);}
+}
