--- a/crt.css
+++ b/crt.css
@@ -148,7 +148,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	bottom: 0;
+	bottom: -100vh;
 	right: 0;
 	background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
 	z-index: 2;
