--- a/crt.css
+++ b/crt.css
@@ -136,6 +136,8 @@
 	left: 0;
 	bottom: 0;
 	right: 0;
+	width: 100%;
+	height: 100%;
 	background: rgba(18, 16, 16, 0.1);
 	opacity: 0;
 	z-index: 2;
@@ -148,8 +150,10 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	bottom: -100vh;
+	bottom: 0;
 	right: 0;
+	width: 100%;
+	height: 100%;
 	background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
 	z-index: 2;
 	background-size: 100% 2px, 3px 100%;
