--- a/crt.css
+++ b/crt.css
@@ -63,71 +63,73 @@
 		opacity: 0.24387;
 	}
 }
+
 @keyframes textShadow {
 	0% {
-		text-shadow: 0.4389924193300864px 0 1px rgba(0,30,255,0.5), -0.4389924193300864px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.006588ch 0 0.02ch rgba(0,30,255,0.5), -0.006587ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	5% {
-		text-shadow: 2.7928974010788217px 0 1px rgba(0,30,255,0.5), -2.7928974010788217px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.041894ch 0 0.02ch rgba(0,30,255,0.5), -0.041893ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	10% {
-		text-shadow: 0.02956275843481219px 0 1px rgba(0,30,255,0.5), -0.02956275843481219px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.000443ch 0 0.02ch rgba(0,30,255,0.5), -0.000443ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	15% {
-		text-shadow: 0.40218538552878136px 0 1px rgba(0,30,255,0.5), -0.40218538552878136px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.006033ch 0 0.02ch rgba(0,30,255,0.5), -0.006033ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	20% {
-		text-shadow: 3.4794037899852017px 0 1px rgba(0,30,255,0.5), -3.4794037899852017px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.052191ch 0 0.02ch rgba(0,30,255,0.5), -0.052191ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	25% {
-		text-shadow: 1.6125630401149584px 0 1px rgba(0,30,255,0.5), -1.6125630401149584px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.024188ch 0 0.02ch rgba(0,30,255,0.5), -0.024188ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	30% {
-		text-shadow: 0.7015590085143956px 0 1px rgba(0,30,255,0.5), -0.7015590085143956px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.010523ch 0 0.02ch rgba(0,30,255,0.5), -0.010523ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	35% {
-		text-shadow: 3.896914047650351px 0 1px rgba(0,30,255,0.5), -3.896914047650351px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.058453ch 0 0.02ch rgba(0,30,255,0.5), -0.058453ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	40% {
-		text-shadow: 3.870905614848819px 0 1px rgba(0,30,255,0.5), -3.870905614848819px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.058064ch 0 0.02ch rgba(0,30,255,0.5), -0.058064ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	45% {
-		text-shadow: 2.231056963361899px 0 1px rgba(0,30,255,0.5), -2.231056963361899px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.033466ch 0 0.02ch rgba(0,30,255,0.5), -0.033466ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	50% {
-		text-shadow: 0.08084290417898504px 0 1px rgba(0,30,255,0.5), -0.08084290417898504px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.001213ch 0 0.02ch rgba(0,30,255,0.5), -0.001213ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	55% {
-		text-shadow: 2.3758461067427543px 0 1px rgba(0,30,255,0.5), -2.3758461067427543px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.035638ch 0 0.02ch rgba(0,30,255,0.5), -0.035638ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	60% {
-		text-shadow: 2.202193051050636px 0 1px rgba(0,30,255,0.5), -2.202193051050636px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.033033ch 0 0.02ch rgba(0,30,255,0.5), -0.033033ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	65% {
-		text-shadow: 2.8638780614874975px 0 1px rgba(0,30,255,0.5), -2.8638780614874975px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.042959ch 0 0.02ch rgba(0,30,255,0.5), -0.042958ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	70% {
-		text-shadow: 0.48874025155497314px 0 1px rgba(0,30,255,0.5), -0.48874025155497314px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.007331ch 0 0.02ch rgba(0,30,255,0.5), -0.007331ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	75% {
-		text-shadow: 1.8948491305757957px 0 1px rgba(0,30,255,0.5), -1.8948491305757957px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.028423ch 0 0.02ch rgba(0,30,255,0.5), -0.028423ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	80% {
-		text-shadow: 0.0833037308038857px 0 1px rgba(0,30,255,0.5), -0.0833037308038857px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.00125ch 0 0.02ch rgba(0,30,255,0.5), -0.001249ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	85% {
-		text-shadow: 0.09769827255241735px 0 1px rgba(0,30,255,0.5), -0.09769827255241735px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.001466ch 0 0.02ch rgba(0,30,255,0.5), -0.001465ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	90% {
-		text-shadow: 3.443339761481782px 0 1px rgba(0,30,255,0.5), -3.443339761481782px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.05165ch 0 0.02ch rgba(0,30,255,0.5), -0.05165ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	95% {
-		text-shadow: 2.1841838852799786px 0 1px rgba(0,30,255,0.5), -2.1841838852799786px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.032763ch 0 0.02ch rgba(0,30,255,0.5), -0.032763ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 	100% {
-		text-shadow: 2.6208764473832513px 0 1px rgba(0,30,255,0.5), -2.6208764473832513px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+		text-shadow: 0.039314ch 0 0.02ch rgba(0,30,255,0.5), -0.039313ch 0 0.02ch rgba(255,0,80,0.3), 0 0 0.1ch;
 	}
 }
+
 .crt::after {
 	content: " ";
 	display: block;
@@ -144,6 +146,7 @@
 	pointer-events: none;
 	animation: flicker 0.15s infinite;
 }
+
 .crt::before {
 	content: " ";
 	display: block;
@@ -159,6 +162,5 @@
 	background-size: 100% 2px, 3px 100%;
 	pointer-events: none;
 }
-.crt {
-	animation: textShadow 1.6s infinite;
-}
+
+.crt {animation: textShadow 1.6s 1}
