--- a/fonts/VCR-OSD-MONO/stylesheet.css
+++ b/fonts/VCR-OSD-MONO/stylesheet.css
@@ -1,9 +1,8 @@
 @font-face {
     font-family: 'VCR OSD Mono';
-    src: local('VCR OSD Mono'), local('VCR OSD Mono'),
+    src:
         url('hinted-subset-VCROSDMono.woff2') format('woff2'),
         url('hinted-subset-VCROSDMono.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
-
