--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ i {font-style: normal}
 	height: 0;
 
 	/* text stuff */
-	color: lightgray;
+	color: white;
 	line-height: 0.97;
 	/* word-break: break-all; */
 
