--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
 	align-items: center;
 
 	/* stylistic stuff */
-	background: #000000;
+	background: black;
 	overflow: hidden;
 
 	/* text stuff */
