--- a/fonts/VCR-OSD-MONO/stylesheet.css
+++ b/fonts/VCR-OSD-MONO/stylesheet.css
@@ -1,8 +1,9 @@
 @font-face {
     font-family: 'VCR OSD Mono';
-    src:
+    src: local('VCR OSD Mono'), local('VCROSDMono'),
         url('hinted-subset-VCROSDMono.woff2') format('woff2'),
         url('hinted-subset-VCROSDMono.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
+
