--- a/apps/tvs/main.css
+++ b/apps/tvs/main.css
@@ -8,11 +8,13 @@
 
 	--button-bg: hsl(40, 100%, 65%);
 	--button-bg-hover: hsl(0, 54%, 60%);
+	--button-bg-active: hsl(0, 40%, 57%);
 
 	--detail-bg: hsl(300, 35%, 60%);
 	--detail-color: hsl(40, 100%, 65%);
 	--detail-button-bg: hsl(0, 54%, 60%);
 	--detail-button-bg-hover: hsl(40, 100%, 65%);
+	--detail-button-bg-active: hsl(40, 70%, 60%);
 }
 
 
@@ -164,9 +166,28 @@ body {
 	user-select: none;
 }
 
-.outer > .menu > .buttons > li:hover {
+#returnbutton.button {
+	/* appearance */
+	background: var(--button-bg);
+	padding: 1px 5px 0 0;
+	content: "RETURN";
+
+	/* text */
+	text-align: right;
+	font-size: 12pt;
+
+	/* interactivity */
+	user-select: none;
+}
+
+.outer > .menu > .buttons > li:hover, #returnbutton.button:hover {
 	/* appearance */
 	background: var(--button-bg-hover);
+}
+
+.outer > .menu > .buttons > li:active, #returnbutton.button:active {
+	/* appearance */
+	background: var(--button-bg-active);
 }
 
 
@@ -191,6 +212,9 @@ body {
 	/* text */
 	font-size: 37px;
 	color: var(--menu-color);
+
+	/* transitions */
+	transition: width 0.2s linear;
 }
 
 .container > .header > .transition {
@@ -267,6 +291,9 @@ body {
 	/* text */
 	font-size: 37px;
 	color: var(--menu-color);
+
+	/* transitions */
+	transition: width 0.2s linear;
 }
 
 .container > .footer > .transition {
@@ -357,7 +384,7 @@ body {
 	width: 200px;
 
 	display: grid;
-	grid-template-rows: repeat(8, max-content);
+	grid-template-rows: repeat(7, max-content);
 	gap: 5px;
 
 	/* appearance */
@@ -682,6 +709,11 @@ body {
 .detail-view > .menu > .buttons > li:hover {
 	/* appearance */
 	background: var(--detail-button-bg-hover);
+}
+
+.detail-view > .menu > .buttons > li:active {
+	/* appearance */
+	background: var(--detail-button-bg-active);
 }
 
 
