--- a/apps/tvconsole/main.css
+++ b/apps/tvconsole/main.css
@@ -1,12 +1,21 @@
 :root {
+	--red:   hsl(0, 54%, 60%);
+	--green: hsl(110, 35%, 60%);
+	--blue:  hsl(230, 72%, 70%);
+
+	--login-header-bg: hsl(230, 72%, 70%);
+	--login-header-alt-bg: hsl(346, 42%, 70%);
+	--login-input-bg: hsl(258, 53%, 69%);
+
+
 	--accent-spacing: 200px;
-	--titlebar-bg: hsl(50, 100%, 75%);
-	--titlebar-color: hsl(35, 100%, 50%);
+	--titlebar-bg: hsl(204, 66%, 67%);
+	--titlebar-color: hsl(231, 100%, 69%);
 
-	--menu-bg: hsl(35, 100%, 50%);
-	--menu-color: hsl(40, 100%, 65%);
+	--menu-bg: hsl(230, 72%, 70%);
+	--menu-color: hsl(261, 71%, 70%);
 
-	--button-bg: hsl(40, 100%, 65%);
+	--button-bg: hsl(261, 71%, 70%);
 	--button-bg-hover: hsl(0, 54%, 60%);
 	--button-bg-active: hsl(0, 40%, 57%);
 
@@ -29,13 +38,284 @@ body {
 	/* appearance */
 	background: black;
 
-	display: flex;
-	flex-direction: column;
-	align-content: center;
-
 	/* text */
 	font-family: 'Oswald', sans-serif;
 }
+
+
+
+
+.red   {background: var(--red)}
+.green {background: var(--green)}
+.blue  {background: var(--blue)}
+
+
+
+
+.capsule {
+	/* positioning */
+	display: flex;
+	justify-content: center;
+	align-content: center;
+
+	/* appearance */
+	opacity: 0;
+}
+
+
+
+.capsule > .login-modal {
+	/* positioning */
+	display: grid;
+	grid-template-columns: 132px 300px;
+}
+
+
+.capsule > .login-modal > .left-bar {
+	/* positioning */
+	display: grid;
+	grid-template-rows: 66px 22px 22px 66px;
+	gap: 5px;
+}
+
+.capsule > .login-modal > .left-bar > .top {
+	/* appearance */
+	background: var(--login-header-bg);
+	border-radius: 66px 0 0 0;
+}
+
+.capsule > .login-modal > .left-bar > .label {
+	/* positioning */
+	box-sizing: border-box;
+	padding: 0 3px 0 0;
+
+	/* appearance */
+	background: var(--login-header-alt-bg);
+
+	/* text */
+	text-align: right;
+	font-size: 16px;
+
+	/* interactivity */
+	user-select: none;
+}
+
+.capsule > .login-modal > .left-bar > .spacer {
+	/* appearance */
+	background: var(--login-header-bg);
+}
+
+.capsule > .login-modal > .left-bar > .bottom {
+	/* appearance */
+	background: var(--login-header-bg);
+	border-radius: 0 0 0 66px;
+}
+
+
+.capsule > .login-modal > .right-content {
+	/* positioning */
+	display: grid;
+	grid-template-rows: 66px max-content 66px;
+	gap: 5px;
+}
+
+
+.capsule > .login-modal > .right-content > .header {
+	/* positioning */
+	display: grid;
+	grid-template-columns: 22px 1fr max-content 44px;
+}
+
+.capsule > .login-modal > .right-content > .header > .transition {
+	/* position */
+	position: relative;
+	height: 44px;
+	transform: scaleX(1.11);
+
+	/* appearance */
+	background: var(--login-header-bg);
+}
+
+.capsule > .login-modal > .right-content > .header > .transition::before {
+	/* positioning */
+	position: absolute;
+	top:  22px;
+	left: 1px;
+
+	width:  23px;
+	height: 23px;
+
+	/* appearance */
+	content: "";
+	background: black;
+	border-top-left-radius: 22px;
+}
+
+.capsule > .login-modal > .right-content > .header > .spacer {
+	/* position */
+	position: relative;
+	height: 22px;
+
+	/* appearance */
+	background: var(--login-header-bg);
+}
+
+.capsule > .login-modal > .right-content > .header > .title {
+	/* positioning */
+	margin: 0 5px 0 5px;
+	transform: translate(0, -10px);
+
+	/* text */
+	font-size: 27px;
+	color: white;
+	
+	/* interactivity */
+	user-select: none;
+}
+
+.capsule > .login-modal > .right-content > .header > .right {
+	/* position */
+	position: relative;
+	height: 22px;
+
+	/* appearance */
+	background: var(--login-header-bg);
+	border-radius: 0 22px 0 0;
+}
+
+
+/* ======================================================================================= */
+
+.capsule > .login-modal > .right-content > .content {
+	/* position */
+	margin-left: 5px;
+
+	display: grid;
+	grid-template-rows: 22px 22px;
+	gap: 5px
+}
+
+.capsule > .login-modal > .right-content > .content > .input {
+	/* positioning */
+	display: grid;
+	grid-template-columns: 17px 155px minmax(22px, 1fr);
+	gap: 5px;
+}
+
+.capsule > .login-modal > .right-content > .content > .input > .spacer {
+	/* appearance */
+	background: var(--login-input-bg);
+}
+
+.capsule > .login-modal > .right-content > .content > .input > input {
+	/* positioning */
+	padding-top: -1px;
+	height: 22px;
+	padding: 0;
+
+	/* appearance */
+	background: none;
+	border: none;
+
+	/* text */
+	font-family: 'Oswald', sans-serif;
+	font-size: 27px;
+	color: var(--login-input-bg);
+	caret-color: var(--login-input-bg);
+	text-transform: uppercase;
+}
+
+.capsule > .login-modal > .right-content > .content > .input > input:focus {
+	/* appearance */
+	outline: none;
+}
+
+/* ======================================================================================= */
+
+
+.capsule > .login-modal > .right-content > .footer {
+	/* positioning */
+	display: grid;
+	grid-template-columns: 22px 22px max-content 1fr 30px;
+}
+
+.capsule > .login-modal > .right-content > .footer > .transition {
+	/* position */
+	position: relative;
+	height: 44px;
+	margin-top: 22px;
+	transform: scaleX(1.11);
+
+	/* appearance */
+	background: var(--login-header-bg);
+}
+
+.capsule > .login-modal > .right-content > .footer > .transition::before {
+	/* positioning */
+	position: absolute;
+	top:  -1px;
+	left: 1px;
+
+	width:  23px;
+	height: 23px;
+
+	/* appearance */
+	content: "";
+	background: black;
+	border-bottom-left-radius: 22px;
+}
+
+.capsule > .login-modal > .right-content > .footer > .title {
+	/* positioning */
+	margin: 0 5px 0 5px;
+	margin-top: 44px;
+	transform: translate(0, -10px);
+
+	/* text */
+	font-size: 27px;
+	color: white;
+	
+	/* interactivity */
+	user-select: none;
+}
+
+.capsule > .login-modal > .right-content > .footer > .spacer {
+	/* position */
+	position: relative;
+	height: 22px;
+	margin-top: 44px;
+
+	/* appearance */
+	background: var(--login-header-bg);
+}
+
+.capsule > .login-modal > .right-content > .footer > .right {
+	/* position */
+	position: relative;
+	height: 22px;
+	margin-top: 44px;
+
+	/* appearance */
+	background: var(--login-header-bg);
+	border-radius: 0 0 22px 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 .giga-container {
@@ -45,9 +325,6 @@ body {
 	display: grid;
 	grid-template-rows: 30px max-content;
 	gap: 24px;
-
-	/* appearance */
-	opacity: 0;
 }
 
 .giga-container > .titlebar {
@@ -150,13 +427,7 @@ body {
 	/* appearance */
 }
 
-.outer > .menu > .buttons > a {
-	/* appearance */
-	color: black;
-	text-decoration: none;
-}
-
-.outer > .menu > .buttons li {
+.outer > .menu > .buttons > li {
 	/* positioning */
 	height: 46px;
 	box-sizing: border-box;
@@ -572,7 +843,7 @@ body {
 	height: 25px;
 
 	display: grid;
-	grid-template-columns: 30px 1fr max-content 212px 80px;
+	grid-template-columns: 30px 240px 156px 212px 80px;
 
 	z-index: 1;
 
@@ -589,19 +860,38 @@ body {
 	/* border-radius: 25px 0 0 25px; */
 }
 
-.detail-view > .view > .footer > .spacer {
+.detail-view > .view > .footer > .img-url {
 	/* positioning */
-	height: inherit;
+	height: 25px;
 	margin-left: 5px;
+	padding: 0;
 
 	/* appearance */
-	background: var(--detail-bg);
+	background: none;
+	border: none;
+	outline: none;
+
+	/* text */
+	color: var(--detail-bg);
+	font-family: 'Oswald', sans-serif;
+	font-size: 17px;
 }
 
-.detail-view > .view > .footer > .title {
+.detail-view > .view > .footer > .img-url::placeholder {
+	/* text */
+	color: var(--detail-bg);
+	opacity: 0.5;
+}
+
+.detail-view > .view > .footer > .img-controls {
 	/* positioning */
-	margin: 0 1px 0 5px;
+	height: 25px;
+	margin: 0 0 0 5px;
 	transform: translate(0, -11px);
+
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: 5px;
 
 	/* text */
 	color: var(--detail-color);
@@ -610,6 +900,35 @@ body {
 	user-select: none;
 }
 
+.detail-view > .view > .footer > .img-controls > .button {
+	/* positioning */
+	height: inherit;
+	transform: translate(0, 11px);
+
+	display: flex;
+	justify-content: center;
+	align-content: center;
+
+	/* appearance */
+	/* background: var(--detail-bg); */
+
+	/* interactivity */
+	user-select: none;
+	cursor: pointer;
+}
+
+.detail-view > .view > .footer > .img-controls > .button:hover {opacity: 0.9}
+.detail-view > .view > .footer > .img-controls > .button:active {opacity: 0.8}
+
+
+.detail-view > .view > .footer > .spacer {
+	/* positioning */
+	height: inherit;
+	margin-left: 5px;
+
+	/* appearance */
+	background: var(--detail-bg);
+}
 
 .detail-view > .view > .footer > .transition {
 	/* positioning */
@@ -688,10 +1007,13 @@ body {
 	user-select: none;
 }
 
+
 .detail-view > .view > .content > .info > .detail {
 	/* positioning */
 	position: relative;
-	
+	width: 207px;
+	height: 46px;
+
 	display: flex;
 	flex-direction: row;
 	align-items: flex-end;
@@ -715,21 +1037,63 @@ body {
 	content: "";
 }
 
-.detail-view > .view > .content > .info > .description {
+.detail-view > .view > .content > .info > .detail > input {
 	/* positioning */
-	transform: translateX(25px);
-	padding-right: 5px;
+	width: inherit;
+	height: inherit;
+	box-sizing: border-box;
+	padding: 0;
 
 	/* appearance */
-	overflow-y: scroll;
+	background: none;
+	border: none;
+	outline: none;
 
 	/* text */
-	color: var(--detail-color);
+	font-family: 'Oswald', sans-serif;
 	font-size: 12pt;
 	text-align: right;
+	color: var(--detail-color);
+}
+
+.detail-view > .view > .content > .info > .detail > input::placeholder {
+	/* text */
+	color: var(--detail-bg);
+	opacity: 0.5;
 }
 
 
+.detail-view > .view > .content > .info > textarea.description {
+	/* positioning */
+	transform: translateX(22px);
+	width: 207px;
+	height: 121px;
+
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+
+	/* appearance */
+	background: none;
+	border: none;
+	outline: none;
+
+	/* text */
+	font-family: 'Oswald', sans-serif;
+	font-size: 12pt;
+	text-align: right;
+	color: var(--detail-color);
+
+	/* interactivity */
+	overflow-y: scroll;
+	resize: none;
+}
+
+.detail-view > .view > .content > .info > textarea.description::placeholder {
+	/* text */
+	color: var(--detail-bg);
+	opacity: 0.5;
+}
 
 
 .detail-view > .view > .content > .info > .stock {
@@ -745,6 +1109,7 @@ body {
 
 	/* interactivity */
 	user-select: none;
+	cursor: pointer;
 }
 
 
@@ -796,7 +1161,7 @@ body {
 	padding: 22px 0 0 4px;
 
 	/* appearance */
-	background: var(--detail-button-bg);
+	/* background: var(--detail-button-bg); */
 
 	list-style: none;
 
@@ -811,13 +1176,16 @@ body {
 
 .detail-view > .menu > .buttons > li:hover {
 	/* appearance */
-	background: var(--detail-button-bg-hover);
+	background: var(--detail-button-bg-hover) !important;
 }
 
 .detail-view > .menu > .buttons > li:active {
 	/* appearance */
-	background: var(--detail-button-bg-active);
+	background: var(--detail-button-bg-active) !important;
 }
+
+
+
 
 
 
