--- a/examples/event1/main.css
+++ b/examples/event1/main.css
@@ -117,6 +117,7 @@ body {
   position: absolute;
   top: 0;
   width: 100%;
+  height: 100vh;
   z-index: -1;
   -webkit-user-select: none;
      -moz-user-select: none;
